# haskell-logger

./: .gitignore  README.md  logger.cabal  package.yaml
src/System/: Log.hs
src/System/Log/: Data.hs  Filter.hs  Format.hs  Level.hs  Log.hs  Simple.hs  TH.hs  Tuples.hs
src/System/Log/Logger/: Base.hs  Drop.hs  Handler.hs  Priority.hs  Thread.hs  Writer.hs
